# pstop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
choco/: pstop.nuspec
choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
src/: app.rs  color_scheme.rs  config.rs  input.rs  main.rs  mouse.rs
src/system/: collector.rs  cpu.rs  gpu.rs  memory.rs  mod.rs  netstat.rs  network.rs  process.rs  winapi.rs
src/ui/: affinity_menu.rs  environment_view.rs  footer.rs  handles_view.rs  header.rs  help.rs  io_priority_menu.rs  kill_menu.rs  mod.rs  process_table.rs  setup_menu.rs  sort_menu.rs  tab_bar.rs  user_menu.rs
